syntax = "proto3";
package config;

message Config {
  bool debug = 1;
  GoogleCloud google_cloud = 2;
  Logging logging = 3;
  Postgres postgres = 4;
  APIServer api_server = 5;
}

message GoogleCloud {
  string project_id = 1;
  Trace trace = 2;

  message Trace {
    bool enabled = 1;
    float sampling_rate = 2;
  }
}

message Logging {
  Severity severity = 1;

  // Cloud Logging に定義された LogSeverity に対応する。
  // https://cloud.google.com/logging/docs/reference/v2/rest/v2/LogEntry#logseverity
  enum Severity {
    SEVERITY_UNSPECIFIED = 0;
    SEVERITY_DEBUG = 100;
    SEVERITY_INFO = 200;
    SEVERITY_NOTICE = 300;
    SEVERITY_WARNING = 400;
    SEVERITY_ERROR = 500;
    SEVERITY_CRITICAL = 600;
    SEVERITY_ALERT = 700;
    SEVERITY_EMERGENCY = 800;
  }
}

message Postgres {
  string host = 1;
  int32 port = 2;
  string user = 3;
  string password = 4;
  string database = 5;
  string sslmode = 6;
}

message APIServer {
  int32 port = 1;
  Cors cors = 2;

  message Cors {
    repeated string allowed_origins = 1;
    repeated string allowed_methods = 2;
    repeated string allowed_headers = 3;
    repeated string expose_headers = 4;
    int64 max_age = 5;
    bool allow_credentials = 6;
  }
}
